<resources>
    <string name="app_name">Adoptame</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="str_tittle">Biblioteca UTN Electronica</string>
    <!-- Fragment Login y SignUp-->
    <string name="str_hint_email">Email</string>
    <string name="str_hint_pass">Contraseña</string>
    <string name="str_login_btn">Ingresar</string>
    <string name="str_sign_up">Registrarse</string>

    <string name="str_hint_name">Nombre</string>
    <string name="str_hint_last_name">Apellido</string>

    <string name="str_register_btn">Registrar</string>


    <!-- Dialog -->
    <string name="dialog_title">Error</string>
    <string name="dialog_msg">Complete todos los campos</string>
    <string name="dialog_positive_ok">ENTENDIDO</string>
    <string name="dialog_positive_accept">ACEPTAR</string>
    <string name="dialog_negative_cancel">CANCELAR</string>
    <!-- Toast-->
    <string name="toast_complete">Usuario o contraseña incorrectos</string>
    <string name="toast_user_repeat">El usuario ya existe</string>


    <!-- Toolbar menu -->
    <string name="action_settings">Configuracion</string>
    <string name="action_add">Añadir</string>
    <string name="action_search">Buscar</string>
    <string name="action_log_out">Salir</string>


    <!-- FireBase -->
    <string name="id_0">Soy mas bueno que lazy</string>
    <string name="id_1">Te prometo que no rompo nada</string>
    <string name="id_2">Soy muy cariñoso</string>
    <string name="id_3">Vamos a ser los mejores amigos</string>

</resources>
